# msdf-atlas-gen

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
msdf-atlas-gen/: FontGeometry.h  GlyphGeometry.h  json-export.cpp  json-export.h  msdf-atlas-gen.h
